renamed features module due to build conflicts on linux and fixed compilation under ubuntu 16.04

--- a/src/modules/features2d/CMakeLists.txt
+++ b/src/modules/features2d/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SOURCES
 	featurelist.cxx
 	featureliststatistics.cxx
 	featurelistviewcontroller.cxx
-	featuresmodule.cxx
+	features2dmodule.cxx
 	polygon.cxx
 	polygonlist.cxx
 	polygonliststatistics.cxx
@@ -31,7 +31,7 @@ set(HEADERS
 	polygonlist.hxx
 	polygonliststatistics.hxx
 	polygonlistviewcontroller.hxx
-    features.h)
+    features2d.h)
 
 add_definitions(-DGRAIPE_FEATURES_BUILD)
 
