--- a/src/modules/opticalflow/CMakeLists.txt
+++ b/src/modules/opticalflow/CMakeLists.txt
@@ -22,4 +22,4 @@ add_library(graipe_opticalflow SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_opticalflow PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_opticalflow graipe_core graipe_features graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets)
+target_link_libraries(graipe_opticalflow graipe_core graipe_features2d graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets)
