--- a/src/modules/vectorfieldprocessing/CMakeLists.txt
+++ b/src/modules/vectorfieldprocessing/CMakeLists.txt
@@ -17,4 +17,4 @@ add_library(graipe_vectorfieldprocessing SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_vectorfieldprocessing PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_vectorfieldprocessing graipe_core graipe_features graipe_images graipe_vectorfields Qt5::Widgets)
+target_link_libraries(graipe_vectorfieldprocessing graipe_core graipe_features2d graipe_images graipe_vectorfields Qt5::Widgets)
