--- a/src/modules/featurematching/CMakeLists.txt
+++ b/src/modules/featurematching/CMakeLists.txt
@@ -17,4 +17,4 @@ add_library(graipe_featurematching SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_featurematching PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_featurematching graipe_core graipe_features graipe_images  graipe_vectorfields ${FFTW_LIBRARIES} Qt5::Widgets)
+target_link_libraries(graipe_featurematching graipe_core graipe_features2d graipe_images  graipe_vectorfields ${FFTW_LIBRARIES} Qt5::Widgets)
