--- a/src/modules/imageprocessing/CMakeLists.txt
+++ b/src/modules/imageprocessing/CMakeLists.txt
@@ -15,4 +15,4 @@ add_library(graipe_imageprocessing SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_imageprocessing PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_imageprocessing graipe_core graipe_features graipe_images graipe_vectorfields Qt5::Widgets)
+target_link_libraries(graipe_imageprocessing graipe_core graipe_features2d graipe_images graipe_vectorfields Qt5::Widgets)
