--- a/src/modules/multispectral/CMakeLists.txt
+++ b/src/modules/multispectral/CMakeLists.txt
@@ -20,4 +20,4 @@ add_library(graipe_multispectral SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_multispectral PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_multispectral graipe_core graipe_features graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets)
+target_link_libraries(graipe_multispectral graipe_core graipe_features2d graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets)
