--- a/src/modules/racerclient/CMakeLists.txt
+++ b/src/modules/racerclient/CMakeLists.txt
@@ -18,4 +18,4 @@ add_library(graipe_racerclient SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_racerclient PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_racerclient graipe_core graipe_features graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets Qt5::Network)
+target_link_libraries(graipe_racerclient graipe_core graipe_features2d graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets Qt5::Network)
