--- a/src/modules/registration/CMakeLists.txt
+++ b/src/modules/registration/CMakeLists.txt
@@ -17,4 +17,4 @@ add_library(graipe_registration SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_registration PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_registration graipe_core graipe_features graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets)
+target_link_libraries(graipe_registration graipe_core graipe_features2d graipe_images graipe_vectorfields ${FFTW_LIBRARY} Qt5::Widgets)
