--- a/src/modules/winddetection/CMakeLists.txt
+++ b/src/modules/winddetection/CMakeLists.txt
@@ -16,4 +16,4 @@ add_library(graipe_winddetection SHARED ${SOURCES} ${HEADERS})
 set_target_properties(graipe_winddetection PROPERTIES VERSION ${GRAIPE_VERSION} SOVERSION ${GRAIPE_SOVERSION})
 
 # Link library to other libs
-target_link_libraries(graipe_winddetection graipe_core graipe_features graipe_images graipe_vectorfields ${FFTW_LIBRARIES} Qt5::Widgets)
+target_link_libraries(graipe_winddetection graipe_core graipe_features2d graipe_images graipe_vectorfields ${FFTW_LIBRARIES} Qt5::Widgets)
