made factories and vectors for all models and all viewcontrollers global. repaired de/serialisation

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,6 +6,7 @@ project(graipe_core)
 set(SOURCES 
 	algorithm.cxx
 	colortables.cxx
+	globals.cxx
 	impex.cxx
 	logging.cxx
 	model.cxx
@@ -44,6 +45,7 @@ set(HEADERS
 	config.hxx
 	colortables.hxx
 	factories.hxx
+	globals.hxx
 	impex.hxx
 	logging.hxx
 	model.hxx
