--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,6 @@ include(../config/common.cmake)
 
 add_subdirectory(core)
 add_subdirectory(gui)
+add_subdirectory(client)
+add_subdirectory(server)
 add_subdirectory(modules)
