--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,5 @@ project(graipe)
 include(../config/common.cmake)
 
 add_subdirectory(core)
-add_subdirectory(gui)
-add_subdirectory(client)
-add_subdirectory(server)
+add_subdirectory(apps)
 add_subdirectory(modules)
