enhanced docs for wind detection and registration modules

--- a/src/modules/registration/CMakeLists.txt
+++ b/src/modules/registration/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
 	registrationmodule.cxx)
 
 set(HEADERS
+	registration.h
 	warpingfunctors.hxx
     piecewiseaffine_registration.hxx
     delaunay.hxx)
